[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/health_bar.gd" type="Script" id=1]
[ext_resource path="res://art/HealthBar-Under.png" type="Texture" id=2]
[ext_resource path="res://art/HealthBar-Over.png" type="Texture" id=3]
[ext_resource path="res://art/HealthBar-Progress-Tween.png" type="Texture" id=4]
[ext_resource path="res://art/HealthBar-Progress.png" type="Texture" id=5]

[node name="HealthBar" type="Node2D"]
script = ExtResource( 1 )

[node name="HealthBarUnder" type="TextureProgress" parent="."]
margin_right = 48.0
margin_bottom = 12.0
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="HealthBarOver" type="TextureProgress" parent="."]
margin_right = 48.0
margin_bottom = 12.0
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )

[node name="UpdateTween" type="Tween" parent="."]
